fixes bug of overlapping CSS properties

--- a/eventr/src/index.css
+++ b/eventr/src/index.css
@@ -18,18 +18,22 @@ body {
   background-size: cover;
 }
 .side-content-container {
-  display: none;
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
+}
+.side-content-container > div > div {
+  margin-bottom: 30px;
 }
 .changing-content-container {
   /* border: 1px solid aqua; */
   width: 100%;
 }
+
 .main-content-container {
   /* border: 1px solid #87EE01; */
   width: 100%;
-  
-  padding-top: 20px;
+  padding-top: 100px;
+  padding-bottom: 100px
 }
 .footer-container {
   /* position: relative; */
@@ -55,7 +59,7 @@ body {
     width: 60%;
   }
   .side-content-container {
-    display: unset;
+    margin: 0;
     width: 30%;
   }
   .side-content-container > div > div {
@@ -64,6 +68,9 @@ body {
 }
 
 @media screen and (min-width: 950px){
+  body {
+    font: 300 20px/30px "Open Sans",open-sans,sans-serif;
+  }
   .main-content-container {
     max-width: 1200px;
     padding-bottom: 100px;
@@ -78,9 +85,21 @@ body {
     width: 25%;
   }
 }
-@media screen and (max-width: 950px) {
+@media screen and (min-width: 1400px) {
+  body {
+    font: 300 24px/30px "Open Sans",open-sans,sans-serif;
+  }
   .main-content-container {
-    width: 100%;
+    max-width: 90%;
+  }
+  .changing-content-container {
+    /* border: 1px solid aqua; */
+    justify-content: space-around;
+    width: 50%;
+  }
+  .side-content-container {
+    display: unset;
+    width: 25%;
   }
 }
 
